# aispell

./: .gitignore  Cargo.toml  README.md  examples.md  perf.data  perf.data.old  process_wordist.sh  profile.json  pth_to_safetensors.py
data/: custom_dictionary.txt  custom_wordlist.txt  custom_wordlist_meta.txt
examples/: main_bench.rs
src/: checker.rs  edit.rs  gpt_lm.rs  lib.rs  lm.rs  main.rs  main_iced.rs  model.rs  onnx_lm.rs  rwkv.rs  wonnx_lm.rs
src/rwkv/: context.rs  loader.rs  main.rs  model.rs  util.rs
