[package]
name = "aispell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cached = "0.42.0"
fast_symspell = "0.1.7"
iced = "0.8.0"
lazy_static = "1.4.0"
rust-bert = "0.20.0"
rust_tokenizers = "8.0.0"
seqalign = "0.2.3"
statrs = "0.16.0"
tch = "0.10.3"

[dev-dependencies]
pretty_assertions = "1.3.0"
