[package]
name = "aispell"
version = "0.1.0"
edition = "2021"

[features]
wonnx = ["dep:wonnx", "transformers"]
iced = ["dep:iced"]
rust_bert = ["dep:rust-bert", "transformers"]
transformers = ["dep:edge-transformers", "dep:rust_tokenizers", "dep:tch", "dep:ndarray"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = "3.8.0"
anyhow = "1.0.70"
cached = "0.42.0"
edge-transformers = {version = "0.1.0", features = ["cuda"], optional = true}
fast_symspell = "0.1.7"
half = "2.2.1"
iced = {version = "0.8.0", optional = true}
lazy_static = "1.4.0"
mmap-rs = "0.5.0"
ndarray = {version = "0.15.6", features = ["rayon"], optional = true}
num-traits = "0.2.15"
ort = {version = "1.14.3", features = ["cuda"]}
rust-bert = {version = "0.20.0", optional = true}
rust_tokenizers = {version = "8.0.0", optional = true}
safetensors = "0.3.0"
seqalign = "0.2.3"
serde = { version = "1.0.158", features = ["derive"]}
statrs = "0.16.0"
tch = {version = "0.10.3", optional = true}
tokenizers = "0.13.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
wonnx = {version = "0.4.0", optional = true}

[dev-dependencies]
pretty_assertions = "1.3.0"

[[example]]
name = "main_bench"

[profile.release]
debug = true
